--- a/ClinicaSite/_Imports.razor
+++ b/ClinicaSite/_Imports.razor
@@ -1,5 +1,7 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -7,5 +9,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using ClinicaSite
+@using ClinicaSite.Pages
 @using ClinicaSite.Shared
 @using ClinicaSite.Models;
+@using System.Security.Claims;
+
