Registrar page stylized

--- a/ClinicaSite/_Imports.razor
+++ b/ClinicaSite/_Imports.razor
@@ -12,5 +12,7 @@
 @using ClinicaSite.Pages
 @using ClinicaSite.Shared
 @using ClinicaSite.Models;
+@using ClinicaSite.Services.RegistrationService
+@using ClinicaSite.Services.RegistrationService.Interfaces
 @using System.Security.Claims;
 
