Resolvidos bugs ao registrar clinica/usuario, registro funcionando corretamente

--- a/ClinicaSite/Pages/Register.razor
+++ b/ClinicaSite/Pages/Register.razor
@@ -35,6 +35,10 @@
 	</div>
 </EditForm>
 
+<div role="alert" class="alert-message-div">
+	<p class="alert-message">@registrationMessage</p>
+</div>
+
 @code {
 	private RegistrationModel model = new();
 
