--- a/ClinicaSite/wwwroot/css/app.css
+++ b/ClinicaSite/wwwroot/css/app.css
@@ -84,3 +84,12 @@
         transition: 500ms;
         background-color: #1BA300;
     }
+
+.alert-message-div {
+    text-align: center;
+}
+
+.alert-message {
+    font-size: 20px;
+    font-weight: bold;
+}
