--- a/ClinicaSite/_Imports.razor
+++ b/ClinicaSite/_Imports.razor
@@ -14,5 +14,7 @@
 @using ClinicaSite.Models;
 @using ClinicaSite.Services.RegistrationService
 @using ClinicaSite.Services.RegistrationService.Interfaces
+@using ClinicaSite.Services.LoginService
+@using ClinicaSite.Services.LoginService.Interfaces
 @using System.Security.Claims;
 
