--- a/ClinicaSite/wwwroot/css/app.css
+++ b/ClinicaSite/wwwroot/css/app.css
@@ -93,3 +93,68 @@
     font-size: 20px;
     font-weight: bold;
 }
+
+/* Login */
+
+.iniciar-sessao-box {
+    text-align: center;
+    width: 50%;
+    margin: 20px 0 0 25%;
+    border: solid #1BA300;
+    border-radius: 10px;
+}
+
+.iniciar-sessao-label {
+    background-image: linear-gradient(#1BA300, #22CF00);
+    color: #FFF;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 20px;
+    margin: 0 0 20px 0;
+}
+
+.iniciar-sessao-label > p {
+    margin: 0;
+}
+
+.login-button,
+.registre-se-aqui-button{
+    background-color: #22CF00;
+    color: #FFF;
+    border-color: transparent;
+    border-radius: 10px;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 10px 20px;
+    margin: 10px 0;
+}
+
+    .login-button:hover {
+        transition: 500ms;
+        background-color: #1BA300;
+    }
+
+.registre-se-aqui-div {
+    width: 50%;
+    margin: 20px 0 0 25%;
+    padding: 20px 0;
+    text-align: center;
+    border: solid #1BA300;
+    border-radius: 10px;
+}
+
+.registre-se-aqui-div-p {
+    font-size:  25px;
+    font-weight: bold;
+    margin: 0 0 30px 0;
+}
+
+.registre-se-aqui-button {
+    text-decoration: none;
+}
+
+.registre-se-aqui-button:hover {
+    transition: 500ms;
+    color: #fff;
+    background-color: #1BA300;
+}
