--- a/ClinicaSite/_Imports.razor
+++ b/ClinicaSite/_Imports.razor
@@ -16,7 +16,7 @@
 @using ClinicaSite.Services.RegistrationService.Interfaces
 @using ClinicaSite.Services.LoginService
 @using ClinicaSite.Services.LoginService.Interfaces
-@using ClinicaSite.Services.UserDataService
-@using ClinicaSite.Services.UserDataService.Interfaces
+@using ClinicaSite.Services.UserDataService;
+@using ClinicaSite.Services.UserDataService.Interfaces;
 @using System.Security.Claims;
 
