--- a/ClinicaSite/Pages/Index.razor
+++ b/ClinicaSite/Pages/Index.razor
@@ -2,7 +2,9 @@
 @inject NavigationManager navManager;
 @inject IUserDataService userDataService;
 
-<p>O seu id é: @LoggedInUserId</p>
+<a href="/cadastro">
+    Cadastrar paciente
+</a>
 
 @code {
     private Guid LoggedInUserId { get; set; }
