--- a/ClinicaSite/Shared/MainLayout.razor
+++ b/ClinicaSite/Shared/MainLayout.razor
@@ -3,9 +3,9 @@
 <div>
     <main>
         <navbar class="navbar">
-            <div class="logo">
+            <a class="logo" href="#">
                 Clinica
-            </div>
+            </a>
             <div class="nav-links-div">
                 <AuthorizeView>
                     <Authorized>
