--- a/ClinicaSite/_Imports.razor
+++ b/ClinicaSite/_Imports.razor
@@ -18,5 +18,7 @@
 @using ClinicaSite.Services.LoginService.Interfaces
 @using ClinicaSite.Services.UserDataService;
 @using ClinicaSite.Services.UserDataService.Interfaces;
+@using ClinicaSite.Services.PacienteService;
+@using ClinicaSite.Services.PacienteService.Interfaces;
 @using System.Security.Claims;
 
