Details page finalizada

--- a/ClinicaSite/Pages/Index.razor
+++ b/ClinicaSite/Pages/Index.razor
@@ -31,7 +31,7 @@
 }
 
 <Virtualize Items="@Pacientes" Context="paciente" OverscanCount="50">
-    <a class="pacientes-box" href="/details/@paciente.Id">
+    <a class="pacientes-box" href="/pacientedetails/@paciente.Id">
         <div class="paciente-nome-div">
             @paciente.Nome @paciente.Sobrenome
         </div>
