--- a/ClinicaSite/wwwroot/css/app.css
+++ b/ClinicaSite/wwwroot/css/app.css
@@ -75,7 +75,8 @@
     outline: none;
 }
 
-.registrar-button {
+.registrar-button,
+.first-style-button {
     background-color: #22CF00;
     color: #FFF;
     border-color: transparent;
@@ -86,10 +87,19 @@
     margin: 10px 0;
 }
 
-    .registrar-button:hover {
+    .registrar-button:hover,
+    .first-style-button:hover{
         transition: 500ms;
         background-color: #1BA300;
     }
+
+.first-style-button {
+    text-decoration: none;
+}
+
+.first-style-button:hover {
+    color: #FFF;
+}
 
 .alert-message-div {
     text-align: center;
@@ -294,8 +304,6 @@
     border-color: transparent;
 }
 
-
-
 .pacientes-label {
     display: flex;
     font-weight: bold;
@@ -349,4 +357,47 @@
     margin-right: 220%;
 }
 
+
+/* Paciente Details */
+
+.details-parent-div {
+    border: solid #808080;
+    margin: 20px 0;
+    width: 50%;
+    margin-left: 25%;
+}
+
+.details-div {
+    font-size: 22px;
+    text-align: center;
+}
+
+.details-label {
+    font-weight: bold;
+    margin: 14px 0 0 0;
+    font-size: 22px;
+}
+
+.details-endereco-first-main-div {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 20px 0;
+    font-size: 22px;
+}
+
+.details-endereco-label,
+.details-contato-label {
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+    background-color: var(--main-background-color);
+    color: #FFF;
+    padding: 20px 15px;
+    margin: 30px 0;
+    width: 100%;
+}
+
+.voltar-button-div {
+    text-align: center;
+}
 
