--- a/ClinicaSite/Pages/PacienteDetails.razor
+++ b/ClinicaSite/Pages/PacienteDetails.razor
@@ -106,11 +106,22 @@
 	</div>
 </div>
 
-<div class="voltar-button-div">
-	<a href="#" class="first-style-button">
-		Voltar
-	</a>
+
+<div class="editar-voltar-button-div">
+	<div>
+		<div class="voltar-button-div">
+			<a href="editarcadastropaciente/@Paciente.Id" class="first-style-button">
+				Editar
+			</a>
+		</div>
+	</div>
+	<div class="voltar-button-div">
+		<a href="#" class="first-style-button">
+			Voltar
+		</a>
+	</div>
 </div>
+
 
 
 @code {
