--- a/ClinicaSite/Pages/Index.razor
+++ b/ClinicaSite/Pages/Index.razor
@@ -12,23 +12,49 @@
     </a>
 </div>
 
-@if (IsPacientesSearched)
-{
-    <div class="pacientes-label">
-        <div class="nome-label">
-            Nome
-        </div>
-        <div class="cpf-cadastrado-div">
-            <div class="cpf-label">
-                CPF
-            </div>
 
-            <div>
-                Cadastrado
-            </div>
+<div class="buscar-buttons-parent-div">
+    <div class="buscar-buttons-second-div">
+        <div class="index-search-input-div">
+            <InputText class="index-search-input" @bind-Value="@PacienteName" placeholder="Procurar por nome" />
+        </div>
+
+        <div>
+            <button @onclick="async () => await GetPacienteByName(PacienteName)"
+                    class="first-style-button" id="index-buscar-button">
+                Buscar
+            </button>
         </div>
     </div>
-}
+
+    <div class="buscar-buttons-second-div">
+        <div class="index-search-input-div">
+            <InputText class="index-search-input" @bind-Value="@PacienteCPF" placeholder="Procurar por CPF" />
+        </div>
+
+        <div>
+            <button @onclick="async () => await GetPacienteByCPF(PacienteCPF)"
+                    class="first-style-button" id="index-buscar-button">
+                Buscar
+            </button>
+        </div>
+    </div>
+</div>
+
+<div class="pacientes-label">
+    <div class="nome-label">
+        Nome
+    </div>
+    <div class="cpf-cadastrado-div">
+        <div class="cpf-label">
+            CPF
+        </div>
+
+        <div>
+            Cadastrado
+        </div>
+    </div>
+</div>
 
 <Virtualize Items="@Pacientes" Context="paciente" OverscanCount="50">
     <a class="pacientes-box" href="/pacientedetails/@paciente.Id">
@@ -51,7 +77,9 @@
 @code {
     private Guid LoggedInUserId { get; set; }
     private IList<PacienteModel>? Pacientes { get; set; }
-    private bool IsPacientesSearched = false;
+    private ClinicaModel? Clinica { get; set; }
+    private string PacienteName = "";
+    private string PacienteCPF = "";
 
     protected override async Task OnInitializedAsync()
     {
@@ -68,9 +96,27 @@
         LoggedInUserId = await userDataService.GetLoggedInUserId();
     }
 
+    private async Task GetClinicaModel()
+    {
+        Clinica = await userDataService.GetClinicaModel(LoggedInUserId);
+    }
+
     private async Task GetAllPacientes()
     {
         Pacientes = await pacienteService.GetAllPacientes(LoggedInUserId);
-        IsPacientesSearched = true;
+    }
+
+    private async Task GetPacienteByCPF(string CPF)
+    {
+        var pacientes = await pacienteService.GetAllPacientes(LoggedInUserId);
+
+        Pacientes = pacientes?.Where(x => x.CPF!.Contains(CPF)).ToList();
+    }
+
+    private async Task GetPacienteByName(string name)
+    {
+        var pacientes = await pacienteService.GetAllPacientes(LoggedInUserId);
+
+        Pacientes = pacientes?.Where(x => x.Nome!.Contains(name)).ToList();
     }
 }
