--- a/ClinicaSite/wwwroot/css/app.css
+++ b/ClinicaSite/wwwroot/css/app.css
@@ -75,8 +75,7 @@
     outline: none;
 }
 
-.registrar-button,
-.first-style-button {
+.registrar-button {
     background-color: #22CF00;
     color: #FFF;
     border-color: transparent;
@@ -87,8 +86,7 @@
     margin: 10px 0;
 }
 
-    .registrar-button:hover,
-    .first-style-button:hover{
+    .registrar-button:hover{
         transition: 500ms;
         background-color: #1BA300;
     }
@@ -175,7 +173,38 @@
     background-color: #1BA300;
 }
 
+.buscar-buttons-parent-div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 30px 0 0 0;
+}
+
+.buscar-buttons-second-div {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.index-search-input {
+    font-size: 20px;
+    padding: 20px 0 20px 5px;
+    margin: 0 0 0 5px;
+    width: 98%;
+}
+
+.index-search-input-div {
+    width: 100%;
+}
 /* Cadastro */
+
+.cadastro-error-messages-div {
+    text-align: center;
+    font-weight: bold;
+    font-size: 25px;
+    color: #ff0000;
+    margin: 20px 0;
+}
 
 .cadastrar-form-div {
     border: solid #808080;
@@ -235,6 +264,7 @@
 .nome-sobrenome-input-main-div {
     display: flex;
     justify-content: space-evenly;
+    margin: 0 0 20px 0;
 }
 
 .cpf-cel-email-main-div {
@@ -256,7 +286,8 @@
     width: 30%;
 }
 
-.cadastrar-paciente-button {
+.cadastrar-paciente-button,
+.first-style-button {
     background-color: var(--main-background-color);
     color: #FFF;
     font-size: 25px;
@@ -267,12 +298,20 @@
     border-color: #FFF;
 }
 
-.cadastrar-paciente-button:hover {
+.cadastrar-paciente-button:hover,
+.first-style-button:hover {
     transition: 500ms;
     background-color: #21CB00;
 }
 
 /* Index */
+
+.index-saudacoes-div {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 25px;
+    font-weight: bold;
+}
 
 .index-buttons-div {
     text-align: center;
@@ -324,7 +363,7 @@
 }
 
 .cpf-label {
-    margin-right: 255%;
+    margin-right: 245%;
     margin-left: 25px
 }
 
@@ -354,9 +393,14 @@
 }
 
 .paciente-cpf-div {
-    margin-right: 220%;
+    margin-right: 215%;
 }
 
+#index-buscar-button {
+    border-radius: 0px;
+    border-color: transparent;
+    padding: 18px 15px;
+}
 
 /* Paciente Details */
 
@@ -397,7 +441,26 @@
     width: 100%;
 }
 
+.editar-voltar-button-div {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 30px 0;
+}
+
+.voltar-button-cadastro {
+    text-align: center;
+    margin: 30px 0;
+}
+
 .voltar-button-div {
     text-align: center;
+}
+
+/* Edit Cadastro */
+
+.form-label {
+    font-weight: bold;
+    font-size: 20px;
+    margin-right: 5px;
 }
 
