Pacientes tem sua propia pagina ao inves de ficar na index

--- a/ClinicaSite/Pages/Agendamento.razor
+++ b/ClinicaSite/Pages/Agendamento.razor
@@ -1,5 +1,8 @@
 ﻿@page "/agendamento"
-<input type="date" placeholder="Escolha um data" />
+
+<div>
+    <input type="date" placeholder="Escolha um data" />
+</div>
 
 @code {
 
