--- a/ClinicaSite/Pages/PacienteDetails.razor
+++ b/ClinicaSite/Pages/PacienteDetails.razor
@@ -107,13 +107,16 @@
 </div>
 
 
-<div class="editar-voltar-button-div">
-	<div>
-		<div class="voltar-button-div">
-			<a href="editarcadastropaciente/@Paciente.Id" class="first-style-button">
-				Editar
-			</a>
-		</div>
+<div class="paciente-details-options-div">
+	<div class="voltar-button-div">
+		<a href="agendamento/@Paciente.Id" class="first-style-button">
+			Agendar consulta
+		</a>
+	</div>
+	<div class="voltar-button-div">
+		<a href="editarcadastropaciente/@Paciente.Id" class="first-style-button">
+			Editar
+		</a>
 	</div>
 	<div class="voltar-button-div">
 		<a href="#" class="first-style-button">
