Consulta entity setup finalizado no back e front

--- a/ClinicaSite/_Imports.razor
+++ b/ClinicaSite/_Imports.razor
@@ -14,6 +14,8 @@
 @using ClinicaSite.Models;
 @using ClinicaSite.Services.RegistrationService
 @using ClinicaSite.Services.RegistrationService.Interfaces
+@using ClinicaSite.Services.ConsultaService
+@using ClinicaSite.Services.ConsultaService.Interfaces
 @using ClinicaSite.Services.LoginService
 @using ClinicaSite.Services.LoginService.Interfaces
 @using ClinicaSite.Services.UserDataService;
