Consulta somente pelo ID da clinica, consulta agendada pelo ID da clinica e do ID do paciente

--- a/ClinicaSite/Pages/Agendamento.razor
+++ b/ClinicaSite/Pages/Agendamento.razor
@@ -3,7 +3,7 @@
 @inject IPacienteService pacienteService
 @inject NavigationManager navManager
 
-<div>
+<div class="text-center fw-bold h4 my-4">
     Agende uma consulta para @Paciente!.Nome @Paciente.Sobrenome
 </div>
 
